--- a/package.json
+++ b/package.json
@@ -1,30 +1,15 @@
 {
-    "name": "gps-logger",
-    "version": "2.0.1",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node app"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://https://github.com/715209/gps-logger.git"
-    },
-    "author": "Brian Spit",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://https://github.com/715209/gps-logger/issues"
-    },
-    "homepage": "https://https://github.com/715209/gps-logger#readme",
-    "dependencies": {
-        "express": "^4.16.4",
-        "geo-tz": "^5.0.5",
-        "node-fetch": "^2.6.1",
-        "socket.io": "^2.2.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.6.4",
-        "@babel/preset-env": "^7.6.3"
-    }
+  "name": "gps-logger",
+  "version": "2.0.0",
+  "description": "GPS Logger with weather and location lookup",
+  "main": "index.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "geo-tz": "^8.1.3",
+    "socket.io": "^4.8.1"
+  }
 }
